--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Processing"
+    "## Exploratory Data Analysis"
    ]
   },
   {
