--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -10,7 +10,14 @@
     "This notebook contains code on a simple linear regression problem.\n",
     "\n",
     "### Data\n",
-    "The data used in this simple illustration contains information about used cars and motorcycles listed on CarDekho.com.  The data is in a CSV file and it includes columns such as model, year, selling price, showroom price, kilometers driven, fuel type, seller type, transmission and number of previous owners. Here is a link to the [data](https://www.kaggle.com/datasets/nehalbirla/vehicle-dataset-from-cardekho).\n",
+    "The data used in this simple illustration contains information about 1559 products accross 10 different BigMart stores in different cities. The aim is to build a model that will predict the sales of each product at an outlet.\n",
+    "\n",
+    "The data is in a CSV file and it includes columns such as: \n",
+    "1. Item_Identifier - Unique product ID.\n",
+    "2. Item_Weight - Weight of product.\n",
+    "3. Item_Fat_Content - Whether the product is low fat or not.\n",
+    "4. Item_Visibility - The percentage of the total display area of all products in a store allocated to the particular product.\n",
+    "Item  Here is a link to the [data](https://www.kaggle.com/datasets/nehalbirla/vehicle-dataset-from-cardekho).\n",
     "\n",
     "We will use this data to predict the selling price of used vehicles."
    ]
