--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -16,10 +16,19 @@
     "1. Item_Identifier - Unique product ID.\n",
     "2. Item_Weight - Weight of product.\n",
     "3. Item_Fat_Content - Whether the product is low fat or not.\n",
-    "4. Item_Visibility - The percentage of the total display area of all products in a store allocated to the particular product.\n",
-    "Item  Here is a link to the [data](https://www.kaggle.com/datasets/nehalbirla/vehicle-dataset-from-cardekho).\n",
+    "4. Item_Visibility - The percentage of the total display area of all products.\n",
+    "5. Item_Type - The category to which the product belongs.\n",
+    "6. Item_MRP - Maximum Retail Price (list price) of the product.\n",
+    "7. Outlet_Identifier - Unique store ID\n",
+    "8. Outlet_Establishment_Year - The year in which the store was established.\n",
+    "9. Outlet_Size - The size of the store in terms of ground area covered.\n",
+    "10. Outlet_Location_Type - The type of city in which the store is located.\n",
+    "11. Outlet_Type - Whether the outlet is just a grocery store or some sort of supermarket.\n",
+    "12. Item_Outlet_Sales - Sales of the product in t particular store. This is the outcome variable to be predicted.\n",
     "\n",
-    "We will use this data to predict the selling price of used vehicles."
+    "Here is a link to the [data](https://www.kaggle.com/datasets/shivan118/big-mart-sales-prediction-datasets).\n",
+    "\n",
+    "We will use this data to predict the sales of each product at an outlet."
    ]
   },
   {
