--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -56,7 +56,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
     "\n",
     "import warnings \n",
     "warnings.filterwarnings('ignore')"
@@ -1451,14 +1451,18 @@
     "X_validate = scaler.transform(X_validate)\n",
     "\n",
     "# Convert to pytorch tensors\n",
-    "X_train = torch.Tensor(X_train)\n",
-    "X_test = torch.Tensor(X_validate)\n",
-    "y_train = torch.Tensor(y_train)\n",
-    "y_test = torch.Tensor(y_validate)\n",
+    "train_dataset = TensorDataset(torch.tensor(X_train, dtype=torch.float32), torch.tensor(y_train, dtype=torch.float32))\n",
+    "validate_dataset = TensorDataset(torch.tensor(X_validate, dtype=torch.float32), torch.tensor(y_validate, dtype=torch.float32))\n",
     "\n",
     "num_features = X_train.shape[1]\n",
     "num_epochs = 100\n",
-    "batch_size = 15"
+    "batch_size = 50\n",
+    "train_losses = []\n",
+    "validate_losses = []\n",
+    "\n",
+    "# Create data loaders\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "validate_loader = DataLoader(validate_dataset, batch_size=batch_size)"
    ]
   },
   {
@@ -1491,22 +1495,29 @@
     "\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
-    "    # forward pass\n",
-    "    train_pred = model(X_train)\n",
-    "    train_loss = criterion(train_pred, y_train.unsqueeze(1))\n",
-    "    # backward pass\n",
-    "    optimizer.zero_grad()\n",
-    "    train_loss.backward()\n",
-    "    # # update weights\n",
-    "    optimizer.step()\n",
+    "    for batch_X, batch_y in train_loader:\n",
+    "        # forward pass\n",
+    "        train_pred = model(X_train)\n",
+    "        train_loss = criterion(train_pred, y_train.unsqueeze(1))\n",
+    "        # backward pass\n",
+    "        optimizer.zero_grad()\n",
+    "        train_loss.backward()\n",
+    "        # update weights\n",
+    "        optimizer.step()\n",
+    "        train_losses.append(train_loss/len(train_loader))\n",
     "\n",
     "    \n",
     "\n",
-    "# Evaluate model on validation data\n",
-    "with torch.no_grad():\n",
-    "    model.eval()\n",
-    "    val_pred = model(X_validate)\n",
-    "    val_loss = criterion(val_pred, y_validate.unsqueeze(1))\n",
+    "    # Evaluate model on validation data\n",
+    "    with torch.no_grad():\n",
+    "        model.eval()\n",
+    "        for batch_X, batch_y in validate_loader:\n",
+    "            validate_pred = model(X_validate)\n",
+    "            validate_loss = criterion(validate_pred, y_validate.unsqueeze(1))\n",
+    "            validate_losses.append(validate_loss/len(validate_loader))\n",
+    "\n",
+    "    print(f'Epoch {epoch+1}: | Train Loss: {train_loss/len(train_loader):.5f} | Val Loss: {validate_loss/len(validate_loader):.5f}')\n",
+    "\n",
     "\n",
     "\n",
     "\n",
